# gamebaby

./: CMakeLists.txt  README  gg_sdl.cpp  ks_sdl.cpp  mkanigra_sdl.cpp  mkeyesquat.cpp  mkfont_sdl.cpp  mksnd_sdl.cpp  sdl.hpp  sdl_control.cpp  sdl_screen.cpp  sdl_sound.cpp  shell.html  ww_sdl.cpp
libgbpng/: CMakeLists.txt  png_background_info.cpp  png_binary.cpp
libgbstd/: CMakeLists.txt  character.hpp  control.cpp  control.hpp  control_asm_element.cpp  control_execution.cpp  control_program_execution.cpp  control_program_space.cpp  dn.hpp  file_op.hpp  gadget.hpp  gbstd.cpp  gbstd.hpp  gpfs.hpp  gpfs_directory.cpp  gpfs_node.cpp  gpfs_node_reference.cpp  gpfs_path.cpp  ilc.hpp  ilc_javascript.cpp  image.hpp  math.cpp  math.hpp  menu.hpp  misc.hpp  parser.hpp  process.hpp  random.cpp  random.hpp  screen.cpp  screen.hpp  sha256.cpp  sha256.hpp  sns.hpp  sound.hpp  syntax.hpp  tile_map.hpp  tree_struct.cpp  tree_struct.hpp  typesystem.hpp  (+9 more)
libgbstd/characters/: code_text_iterator.cpp  font.cpp  font_data.txt  string_form.cpp  string_set.cpp  text.cpp  unicode.cpp
libgbstd/dns/: dn_array.cpp  dn_list.cpp  dn_object.cpp
libgbstd/file_ops/: file_op.cpp  ogg_page.cpp  riff_chunk.cpp  riff_subchunk_view.cpp  source_code.cpp  source_code_iterator.cpp  wave.cpp  wave_format.cpp
libgbstd/gadgets/: tile_map.cpp  tile_map_view.cpp  tile_source.cpp
libgbstd/images/: canvas.cpp  canvas__draw.cpp  canvas__draw_string.cpp  image.cpp  image__png.cpp  liner.cpp  misc.png.txt
libgbstd/menus/: table.cpp  view.cpp
libgbstd/parsers/: calculate.cpp  exprrpn.cpp  token.cpp  token_block.cpp  tokenizer.cpp  tokenizer__read_number.cpp  tokenizer__skip.cpp
libgbstd/processes/: clock.cpp  execution.cpp  process.cpp  task.cpp  timer.cpp
libgbstd/sns/: sns_account.cpp  sns_account_observer.cpp  sns_article.cpp  sns_index_list.cpp  sns_platform.cpp  sns_record.cpp  sns_record_table.cpp  sns_tester.cpp  sns_timeline.cpp  sns_timeline_node.cpp  sns_timeline_view.cpp  test_sha256.cpp
libgbstd/sounds/: noise_device.cpp  sawtooth_wave_device.cpp  scale_table.cpp  short_noise_device.cpp  sine_wave_device.cpp  sound_device.cpp  square_wave_device.cpp  triangle_wave_device.cpp
libgbstd/syntaxes/: syntax_branch.cpp  syntax_branch_element.cpp  syntax_definition.cpp  syntax_element.cpp  syntax_expression.cpp  syntax_expression_element.cpp  syntax_formula.cpp  syntax_group.cpp  syntax_operand.cpp  syntax_parser.cpp  syntax_parser__lower.cpp  syntax_rule.cpp  syntax_token.cpp  syntax_token_iterator.cpp  syntax_token_string.cpp  syntax_token_string__read_number.cpp  syntax_token_string_iterator.cpp  syntax_tokenizer.cpp  syntax_tokenizer__read_number.cpp  syntax_tree_node.cpp
libgbstd/tile_maps/: tile_map.cpp  tile_map_view.cpp  tile_source.cpp
libgbstd/typesystems/: array_type_info.cpp  enum_type_info.cpp  function_signature.cpp  memory_sharer.cpp  parameter_list.cpp  struct_type_info.cpp  type_collection.cpp  type_collection__create.cpp  type_derivation.cpp  type_entry.cpp  type_info.cpp  union_type_info.cpp  value.cpp
libgbstd/values/: array.cpp  list.cpp  object.cpp
libgbstd/vms/: assembly.hpp  ast.hpp  ast_node.cpp  ast_node__read_expression.cpp  ast_node__read_function.cpp  ast_node__read_statement.cpp  ast_node__read_type.cpp  compile_context.cpp  expression.hpp  ir.hpp  space.hpp  statement.cpp  statement.hpp  statement__print.cpp  typesystem.hpp  vm__print.cpp  vm_basic_space.cpp  vm_binary_operation.cpp  vm_block.cpp  vm_block_statement.cpp  vm_block_statement__create_type.cpp  vm_block_statement__read_block.cpp  vm_branch_instruction.cpp  vm_call_operation.cpp  vm_codeline.cpp  vm_cold_object.cpp  vm_context.cpp  vm_context__create_type.cpp  vm_context__frame.cpp  vm_context__operate.cpp  vm_evaluation_context.cpp  vm_execution.cpp  vm_execution_frame.cpp  vm_expression.cpp  vm_expression.hpp  vm_function.cpp  vm_global_space.cpp  vm_hot_object.cpp  vm_jobfield.cpp  vm_line.cpp  (+28 more)
libgbstd/vms/assemblies/: asm_context.cpp  asm_line.cpp  asm_parameter.cpp  asm_processor.cpp
libgbstd/vms/expressions/: expression.cpp  expression_element.cpp  operand.cpp  postfix_element.cpp  primary_expression.cpp  primary_expression_element.cpp  simple_value.cpp  unary_expression.cpp
libgbstd/vms/irs/: ir__assemble.cpp  ir_block_info.cpp  ir_context.cpp  ir_function.cpp  ir_global_space.cpp  ir_memory.cpp  ir_operand.cpp  ir_operation.cpp  ir_operation.hpp  ir_operation__read.cpp  ir_processor.cpp  ir_processor__operate.cpp  ir_statement.cpp  ir_statement.hpp  ir_value.cpp  ir_variable.cpp
libgbstd/vms/spaces/: basic_space.cpp  basic_space__read.cpp  block_space.cpp  (+6 more)
libgbstd/widgets/: button.cpp  checkbox.cpp  dial.cpp  frame.cpp  icon.cpp  iconshow.cpp  label.cpp  menu_handler.cpp  node.cpp  node_iterator.cpp  operating_node.cpp  radio_button.cpp  slider.cpp
libge/: CMakeLists.txt  aniview.cpp  color_handler.hpp  core.hpp  ge.hpp
libge/color_handlers/: color_handler.cpp  color_holder.cpp  color_maker.cpp
libge/cores/: core.cpp  core_display.cpp  core_paint.cpp  core_paint__draw.cpp  core_paint__make_widget.cpp  core_paint__operate.cpp  core_source.cpp  drawing_recorder.cpp  underlay_stacker.cpp
libsns/: CMakeLists.txt  sns.hpp  sns_account.cpp  sns_account.hpp  sns_account_observer.cpp  sns_article.cpp  sns_index_list.cpp  sns_platform.cpp  sns_record.cpp  sns_record.hpp  sns_record_table.cpp  sns_sha256.cpp  sns_sha256.hpp  sns_table.hpp  sns_tester.cpp  sns_timeline.cpp  sns_timeline_node.cpp  sns_times.hpp
libww/: CMakeLists.txt  girl.txt  gra.png.txt  title.txt  ww_bar.cpp  ww_bar.hpp  ww_battle_section.cpp  ww_battle_section.hpp  ww_battle_section_callbacks.cpp  ww_battle_section_menu.cpp  ww_character.cpp  ww_character.hpp  ww_context.cpp  ww_context.hpp  ww_front_section.cpp  ww_front_section.hpp  ww_manage_section.cpp  ww_manage_section.hpp  ww_opening_section.cpp  ww_opening_section.hpp  ww_party.cpp  ww_party.hpp  ww_spilling_text.cpp  ww_spilling_text.hpp  ww_string_display.cpp  ww_string_display.hpp  ww_system.cpp  ww_system.hpp  ww_warvan_section.cpp  ww_warvan_section.hpp
(+56 files in other folders)
